2016-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/histogramsManager.py: add Logger. Also clearer error if input for user-defined
	systematic is wrong and the user probably meant to use a tree

2016-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: add mechanism to keep extending UL range if running
	in asymptotic mode. Will keep added points and merging
	HypoTestInverterResult until +2sigma band < 0.05 and the UL <0.9x the scan
	range. Also store the plot as pdf and png.
	* src/StatTools.cxx: roll back previous changes

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/StatTools.cxx: add mechanism to keep extending UL range if running
	asymptotic, until +2 sigma band is below 0.05

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/YieldsTable.py: use the logger class for better output
	* scripts/YieldsTableTex.py: use the logger class for better output

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* analysis/tutorial/MySimpleChannelConfig.py: set the default normfactor
	to 1 and not 0.5 - or YieldsTable.py complains and confuses users! 

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/fitConfig.py: renamed set*Channel() methods. They did not really
	set but append. Now called add*Channel() method.

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/configManager.py: split initialize() method in to sub methods to
	make it easier to read and maintain
	* python/configManager.py: add an autodetection of a background-only fit.
	If this is the case, change any defined SRs to VRs unless an overrule flag
	self.keepSignalRegionType is set. Added new doDiscoveryHypoTest to check 
	that we're not running -z. Solves HISTFITTER-16
	* scripts/HistFitter.py: properly set configMgr.doHypoTest and
	configMgr.doDiscoveryHypoTest when doing -p or -z (needed for the feature
	above)
	* python/fitConfig.py: new method to find channels by channelName and not